# gauntcraft

./: .gitignore  CMakeLists.txt  Gauntcraft.sln  README.md
Gauntcraft/: Character.cpp  Character.h  CoreEntity.cpp  CoreEntity.h  CoreTypes.h  CoreUtility.cpp  CoreUtility.h  Engine.cpp  Engine.h  Gauntcraft.vcxproj  Gauntcraft.vcxproj.filters  ILevelScroller.h  ILevelTileGenerator.h  ISDLImageLoader.h  LevelMap.cpp  LevelMap.h  LevelScroller.cpp  LevelScroller.h  LevelTile.cpp  LevelTile.h  SpriteExtent.cpp  SpriteExtent.h  SpriteSheet.cpp  SpriteSheet.h  Timer.cpp  Timer.h  bananabomber-sprites.png.ini  character.png.ini  character2.png.ini  claudius.png.ini  dirt.png.ini  main.cpp
GauntcraftCore/: CMakeLists.txt  GauntcraftCore.vcxproj.filters  ReadMe.txt
GauntcraftCore/inc/: GauntcraftCore.h
gauntcraft/: CMakeLists.txt  Gauntcraft.vcxproj  Gauntcraft.vcxproj.filters  Toolchain-windows.cmake
gauntcraft-testclient/: CMakeLists.txt  gauntcraft-testclient.vcxproj
gauntcraft-testclient/src/: main.cpp
gauntcraft/SDL_gfxPrimitives/: CMakeLists.txt  Makefile.in  README  configure  configure.in
gauntcraft/assets/entities/: character
gauntcraft/assets/sprites/: bananabomber-sprites.png.ini  character.png.ini  character2.png.ini  claudius.png.ini  grass.png.ini  treetop.png.ini  trunk.png.ini
gauntcraft/gauntcraft/: CMakeLists.txt
gauntcraft/gauntcraft/inc/: Character.h  CoreEntity.h  CoreTypes.h  CoreUtility.h  Engine.h  ILevelScroller.h  ISDLImageLoader.h  LevelScroller.h  SpriteExtent.h  SpriteSheet.h  Timer.h
gauntcraft/gauntcraft/src/: CMakeLists.txt  Character.cpp  CoreEntity.cpp  CoreUtility.cpp  Engine.cpp  LevelScroller.cpp  SpriteExtent.cpp  SpriteSheet.cpp  Timer.cpp  main.cpp
gauntcraft/inc/: Character.h  ClientCore.h  ClientCoreEntity.h  ClientCoreTypes.h  ClientCoreUtility.h  Core.h  CoreEntity.h  CoreTypes.h  CoreUtility.h  Engine.h  ICoreServicesProvider.h  IKeyboardTarget.h  ILevelScroller.h  ILevelTileGenerator.h  IMouseTarget.h  ISDLImageLoader.h  InputStack.h  KeyboardHandler.h  LevelScroller.h  LevelScrollerEntity.h  LevelScrollerTile.h  MouseShooter.h  SpriteEntity.h  SpriteExtent.h  SpriteObject.h  SpriteSheet.h  SpriteSheetManager.h  Timer.h
gauntcraft/libs/: CMakeLists.txt
gauntcraft/libs/SDL-1.2.15/local/: Makefile  config.status  libtool  sdl-config  sdl.pc
gauntcraft/libs/SDL-1.2.15/local/lib/: libSDL-1.2.so.0  libSDL.la  libSDLmain.la
gauntcraft/libs/SDL_gfxPrimitives/: CMakeLists.txt  Makefile.am  TestGfxPrimitives.c
gauntcraft/libs/SDL_image-1.2.12/local/: Makefile  config.status  libtool  showimage
gauntcraft/libs/SDL_image-1.2.12/local/.deps/: IMG.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
gauntcraft/libs/SDL_image-1.2.12/local/.libs/: libSDL_image-1.2.so.0  libSDL_image.la  showimage
gauntcraft/libs/SDL_image-1.2.12/local/lib/: libSDL_image.la
gauntcraft/libs/SDL_image-1.2.12/local/lib/pkgconfig/: SDL_image.pc
gauntcraft/macbuild/: CMakeCache.txt
gauntcraft/scripts/: FindSDL_gfx.cmake
gauntcraft/src/: Character.cpp  CoreEntity.cpp  CoreUtility.cpp  Engine.cpp  InputStack.cpp  KeyboardHandler.cpp  LevelScroller.cpp  LevelScrollerEntity.cpp  LevelScrollerTile.cpp  MouseShooter.cpp  SpriteEntity.cpp  SpriteExtent.cpp  SpriteObject.cpp  SpriteSheet.cpp  SpriteSheetManager.cpp  Timer.cpp  main.cpp
gauntcraft/winbuild/: CMakeCache.txt
gauntcraftcore/: CMakeLists.txt  CoreInfostack.h  GauntcraftCore.vcxproj  GauntcraftCore.vcxproj.filters
gauntcraftcore/inc/: CoreInfoheader.h  GauntcraftCore.h  GauntcraftCoreGeoPoint.h  GauntcraftCoreGeometry.h  GauntcraftCoreTypes.h  GauntcraftCoreUtility.h
gauntcraftcore/src/: CoreInfoheader.cpp  GauntcraftCore.cpp  GauntcraftCoreUtility.cpp
gauntcraftserver/: CMakeLists.txt  gauntcraftserver.vcxproj
scripts/: FindSDL_gfx.cmake
